# rover_arm

./: .gitignore  README.md
arduino_rover_arm/OLD/: main.cpp.txt  main_OLD.txt
arduino_rover_arm/lib/ros_lib/arm_us_msg/: GuiFeedback.h
arduino_rover_arm/lib/ros_lib/dynamixel_interface/: DataPorts.h
arduino_rover_arm/lib/ros_lib/robotnik_msgs/: SetInt16.h
arduino_rover_arm/lib/ros_lib/rover_arm_msg/: joint_calib.h
arduino_rover_arm/lib/ros_lib/rover_mini_control/: Status.h
arduino_rover_arm/lib/ros_lib/rover_udes/: CamCommand.h
arduino_rover_arm/lib/rover_arm_lib/DCMotor/: DCMotor.hpp
arduino_rover_arm/lib/rover_arm_lib/EMotor/: EMotor.hpp
arduino_rover_arm/lib/rover_arm_lib/JointController/: JointController.cpp  JointController.hpp
arduino_rover_arm/lib/rover_arm_lib/PIDRover/: PIDRover.hpp
arduino_rover_arm/lib/rover_arm_lib/StepperMotor/: StepperMotor.cpp
arduino_rover_arm/src/: Stepper.cpp
arduino_rover_arm_DC/: platformio.ini
arduino_rover_arm_DC/OLD/: oldmain_v2.txt
arduino_rover_arm_DC/lib/ros_lib/arm_us_msg/: GuiInfo.h  JointLimits.h
arduino_rover_arm_DC/lib/ros_lib/dynamixel_interface/: ServoDiag.h
arduino_rover_arm_DC/lib/ros_lib/robotnik_msgs/: GetMotorsHeadingOffset.h
arduino_rover_arm_DC/lib/ros_lib/rover_arm/: vitesse_moteur_msg.h
arduino_rover_arm_DC/lib/ros_lib/rover_arm_msg/: watchdog.h
arduino_rover_arm_DC/lib/ros_lib/rover_arm_msgs/: desired_joint_state.h
arduino_rover_arm_DC/lib/ros_lib/rover_control_msgs/: camera_control.h  gps.h
arduino_rover_arm_DC/lib/ros_lib/rover_udes/: MotorCommand.h
arduino_rover_arm_DC/lib/rover_arm_lib/AS5600/: AS5600.hpp
arduino_rover_arm_DC/lib/rover_arm_lib/DCMotor/: DCMotor.cpp  DCMotor.hpp
arduino_rover_arm_DC/lib/rover_arm_lib/JointController/: JointController.hpp
arduino_rover_arm_DC/lib/rover_arm_lib/PIDRover/: PIDRover.cpp  PIDRover.hpp
arduino_rover_arm_DC/src/: DC.cpp  Test.txt
arduino_rover_arm_stepper/: platformio.ini
arduino_rover_arm_stepper/OLD/: test1.cpp.txt
arduino_rover_arm_stepper/lib/ros_lib/arm_us_msg/: GuiInfo.h
arduino_rover_arm_stepper/lib/ros_lib/robotnik_msgs/: SetTransform.h
arduino_rover_arm_stepper/lib/ros_lib/rover_arm/: angle.h  arm_gui_cmd.h
arduino_rover_arm_stepper/lib/ros_lib/rover_arm_msg/: desired_joint_state.h  encoder_status.h
arduino_rover_arm_stepper/lib/ros_lib/rover_arm_msgs/: diff_kinematics_calc.h  joint_calib.h
arduino_rover_arm_stepper/lib/rover_arm_lib/AS5600/: AS5600.hpp
arduino_rover_arm_stepper/lib/rover_arm_lib/JointController/: JointController.hpp
arduino_rover_arm_stepper/lib/rover_arm_lib/MovingAverage/: MovingAverage.cpp
arduino_rover_arm_stepper/lib/rover_arm_lib/StepperMotor/: StepperMotor.cpp  (+1 more)
arduino_rover_arm_stepper/src/: Stepper.cpp
arduino_rovus_arm/: conception notes.txt
arduino_rovus_arm/lib/Stepper/: Stepper.cpp  Stepper.h
arduino_rovus_arm/src/: DC.cpp.txt  Stepper.cpp  main.cpp  test2.cpp.txt
moveit_joystick/: CMakeLists.txt  README.md  package.xml
moveit_joystick/src/: moveitjoy_module.py
open_manipulator_description/kinematics/TranslationYAxisAngle4D/: ikfast0x10000049.TranslationYAxisAngle4D.0_1_2_3.cpp  ikfast0x10000049.TranslationYAxisAngle4D.0_1_2_3.pp
open_manipulator_description/rviz/: open_manipulator.rviz
open_manipulator_description/urdf/: open_manipulator.gazebo.urdf  open_manipulator.urdf.xacro  open_manipulator_gazebo.urdf  open_manipulator_robot.urdf  open_manipulator_robot.urdf.xacro  wrapper.xml
open_manipulator_ikfast_arm_plugin/: CMakeLists.txt  open_manipulator_arm_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
open_manipulator_ikfast_arm_plugin/src/: open_manipulator_arm_ikfast_moveit_plugin.cpp  open_manipulator_arm_ikfast_solver.cpp
open_manipulator_moveit_config/: .setup_assistant
open_manipulator_moveit_config/config/: fake_controllers.yaml  kinematics.yaml  open_manipulator.srdf  open_manipulator_simulated_config.yaml  ros_controllers.yaml
open_manipulator_moveit_config/launch/: demo_gazebo.launch  moveit.rviz  planning_context.launch  ros_controllers.launch
ros-openrave/: Dockerfile  README.md
rover_arm/: CMakeLists.txt  IKFast_tutorial.md  package.xml
rover_arm/config/: controller_alex.yaml  controller_logitech.yaml  dynamixel.yaml  joint_config.yaml  speeds.yaml
rover_arm/launch/: arm.launch  cinematic.launch  controller.launch  joints.launch
rover_arm/lib/ros_lib/rover_arm/: feedback.h
rover_arm/lib/ros_lib/rover_mini_control/: Encoder.h
rover_arm/msg/: angle.msg  vitesse_moteur_msg.msg
rover_arm/old/: OLD_master.cpp  feedback_node.py  master.py  old_master.py  old_slave_ino.txt  slave_ino.ino
rover_arm/src/: PID_tuning_node.cpp  diff_kinetics_calc_server.py  joint_watchdog.cpp  liveGraph3DView.py  liveGraphAllViews.py  master.cpp
rover_arm_msg/: CMakeLists.txt  package.xml
rover_arm_msg/msg/: desired_joint_state.msg  encoder_status.msg  watchdog.msg
rover_arm_msgs/: CMakeLists.txt  package.xml
rover_arm_msgs/msg/: PID.msg  arm_gui_cmd.msg  feedback.msg
rover_arm_msgs/srv/: diff_kinematics_calc.srv  joint_calib.srv
rovus_bras/: CMakeLists.txt  master.py  package.xml
rovus_bras/include/moteur/: Moteur.cpp.txt  Moteur.h.txt
rovus_bras/launch/: cinematic.launch  cinematicUSB0.launch
rovus_bras/msg/: angle.msg  arm_gui_cmd.msg  controller.msg  feedback.msg  vitesse_moteur_msg.msg
rovus_bras/old/: CinematiqueBras.txt  CinematiqueResultat  OLD slave.txt  master.py  old_master.py  slave_ino.ino
rovus_bras/slave_ino/: slave_ino.ino
rovus_bras/src/: CinematiqueBras.txt  CinematiqueResultat with linked J3-J4  _mgTmp.01  _mgTmp.02  _mgTmp.03  _mgTmp.04  _mgTmp.05  _mgTmp.06  diff_kinetics_calc_server.py  feedback_node.py  liveGraph3DView.py  liveGraphAllViews.py  master.cpp  master.py  slave.cpp  slave_ino.ino
rovus_bras/src/librairie_moteur/: Moteur.cpp
rovus_bras/srv/: diffKinematicsCalc.srv
(+34 files in other folders)
